<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/back2"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presents"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="#ff000f"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="45sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttnaag"

        android:textStyle="bold"
        android:textColor="#FFFF00"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tv_quick"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:text="@string/quickRead"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/action"
        />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_cat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/icon"
            android:padding="11dp"
            android:src="@drawable/ic_baseline_category_24"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/icon"
                android:padding="11dp"
                android:src="@drawable/ic_baseline_search_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center"></TextView>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>